--- a/Cat photos project.html
+++ b/Cat photos project.html
@@ -8,7 +8,7 @@
     <body> 
         <main>
           <h1>Cat photo App</h1>
-          <h2>Cat photos</h2>
+          <h2>Cat photos that are cute</h2>
           <p>Everyone likes cat photos</p>
           <a href="https://freecatphotoapp.com">Click here for more photos</a>
           <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back">
