finished with more stuff

--- a/Cat photos project.html
+++ b/Cat photos project.html
@@ -8,9 +8,22 @@
     <body> 
         <main>
           <h1>Cat photo App</h1>
-          <h2>Cat photos that are cute</h2>
-          <p>Everyone likes cat photos</p>
-          <a href="https://freecatphotoapp.com">Click here for more photos</a>
-          <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back">
+          <section>
+           <h2>Cat photos that are cute</h2>
+           <p>Everyone loves <a href="https://cdn.freecodecamp.org/curriculum/cat-photo-app/running-cats.jpg"> cute cats</a> online!</p>
+           <p>See more <a href="https://freecatphotoapp.com" target="_blank">Click here for more photos</a> at our gallery</p>
+           <a href="https://freecatphotoapp.com">
+            <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back">
+           </a>
+          </section>
+          <section>
+            <h2>Cat lists</h2>
+            <h3>Things cats love:</h3>
+            <ul>
+              <li>catnip</li>
+              <li>laser pointers</li>
+              <li>lasagna</li>
+            </ul>
+          </section>
         </main>
      </body>
