--- a/Cat photos project.html
+++ b/Cat photos project.html
@@ -24,6 +24,39 @@
               <li>laser pointers</li>
               <li>lasagna</li>
             </ul>
+            <figure><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg"
+             alt="A slice of lasagna on a plate.">
+             <figcaption>Cats <em>love</em> lasagna.</figcaption></figure>
+             <h3>Top 3 things cats hate:</h3>
+             <ol>
+              <li>flea treatment</li>
+              <li>thunder</li>
+              <li>other cats</li>
+             </ol>
+             <figure><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/cats.jpg" alt="Two tabby kittens sleeping together on a couch.">
+              <figcaption>Cats <strong>hate</strong> other cats.</figcaption>
+             </figure>
+          </section>
+          <section>
+            <h2>Cat Form</h2>
+            <form action="https://freecatphotoapp.com/submit-cat-photo">
+             <fieldset> 
+              <legend>Is your cat an indoor or outdoor cat?</legend>
+              <label><input id="indoor" type="radio" checked name="indoor-outdoor" value="indoor">Indoor</label>
+              <label><input type="radio" id="outdoor" name="indoor-outdoor" value="outdoor">Outdoor</label>
+             </fieldset> 
+             <fieldset>
+              <legend>What's your cat's personality?</legend>
+              <input type="checkbox" id="loving" checked name="personality"> <label for="loving">Loving</label>
+              <input id="lazy" type="checkbox" name="personality"> <label for="lazy">Lazy</label>
+              <input id="energetic" type="checkbox" name="personality"><label for="energetic">Energetic</label>
+             </fieldset>
+              <input type="text" placeholder="Cat photo URL" name="catphotourl" required>
+              <button type="submit">Submit</button>
+            </form>
           </section>
         </main>
+        <footer>
+          <p> No Copyright - <a ahref="https://www.freecodecamp.org"> freeCodeCamp.org</a></p>
+        </footer>
      </body>
