--- a/HTML/Cafe menu.html
+++ b/HTML/Cafe menu.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>Cafe menu</title>
-        <link rel="stylesheet" href="CSS.css">
+        <link rel="stylesheet" href="CSS.css"/>
     </head>
     <body>
-        <main>
-            <h1>CAMPER CAFE</h1>
-            <p>Est. 2020</p>
-            <sectio>
-                <h2>Coffee</h2>
-            </section>
-        </main>
+        <div id="menu">
+            <main>
+                <h1>CAMPER CAFE</h1>
+                <p>Est. 2020</p>
+                <section>
+                    <h2>Coffee</h2>
+                </section>
+            </main>
+        </div>
     </body>
 </html>
